--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,19 +22,19 @@ services:
     ports:
       - "3306:3306"
     container_name: auth_mysql
-  # mysql-poll:
-  #   image: mariadb:10.5.8
-  #   command: --default-authentication-plugin=mysql_native_password --init-file /data/application/init.sql
-  #   volumes:
-  #     - ./poll/ops/db/init.sql:/data/application/init.sql
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: poll_pwd
-  #     MYSQL_DATABASE: poll_db
-  #     MYSQL_USER: poll_user
-  #     MYSQL_PASSWORD: poll_pwd
-  #   ports:
-  #     - "3307:3306"
-  #   container_name: polls_mysql
+  mysql-poll:
+    image: mariadb:10.5.8
+    command: --default-authentication-plugin=mysql_native_password --init-file /data/application/init.sql
+    volumes:
+      - ./poll/ops/db/init.sql:/data/application/init.sql
+    environment:
+      MYSQL_ROOT_PASSWORD: poll_pwd
+      MYSQL_DATABASE: poll_db
+      MYSQL_USER: poll_user
+      MYSQL_PASSWORD: poll_pwd
+    ports:
+      - "3307:3306"
+    container_name: poll_mysql
   auth:
     image: auth
     build:
@@ -55,27 +55,27 @@ services:
     depends_on:
       - mysql-auth
       - otelcol
-  # poll:
-  #   image: poll
-  #   build:
-  #     context: ./
-  #     dockerfile: ./poll/Dockerfile
-  #   environment:
-  #     DB_USER: "poll_user"
-  #     DB_PASSWORD: "poll_pwd"
-  #     DB_HOST: "poll_mysql"
-  #     DB_DATABASE: "poll_db"
-  #     DB_PORT: "3306"
-  #     PORT: "8082"
-  #     AUTH_URL: "http://auth:8081"
-  #     OTEL_EXPORTER_OTLP_ENDPOINT: "${OTEL_EXPORTER_OTLP_ENDPOINT}"
-  #     JAEGER_TRACEPROVIDER: "${JAEGER_TRACEPROVIDER}"
-  #   ports:
-  #     - "8082:8082"
-  #   container_name: feedbacks
-  #   depends_on:
-  #     - mysql-feedbacks
-  #     - otelcol
+  poll:
+    image: poll
+    build:
+      context: ./
+      dockerfile: ./poll/Dockerfile
+    environment:
+      DB_USER: "poll_user"
+      DB_PASSWORD: "poll_pwd"
+      DB_HOST: "poll_mysql"
+      DB_DATABASE: "poll_db"
+      DB_PORT: "3306"
+      PORT: "8082"
+      AUTH_URL: "http://auth:8081"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "${OTEL_EXPORTER_OTLP_ENDPOINT}"
+      JAEGER_TRACEPROVIDER: "${JAEGER_TRACEPROVIDER}"
+    ports:
+      - "8082:8082"
+    container_name: poll
+    depends_on:
+      - mysql-poll
+      - otelcol
 
   # ********************
   # Telemetry Components
